--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,14 @@
 {
     "name": "laravel/laravel",
     "type": "project",
-    "description": "TodoList Web App using Vue.js and The Laravel Framework.",
-    "homepage": "https://github.com/mulugu/laravel-vuejs-todolist",
+    "description": "Property Web App using Vue.js and The Laravel Framework.",
+    "homepage": "http://test.com",
     "authors": [
         {
-            "name": "Kevin Mulugu",
-            "email": "kevinmulugu@gmail.com",
-            "homepage": "https://twitter.com/kevvoh_",
-            "role": "Fullstack Developer"
+            "name": "test",
+            "email": "test@gmail.com",
+            "homepage": "http://test.com",
+            "role": "developer"
         }
     ],
     "keywords": [
@@ -19,14 +19,14 @@
     ],
     "license": "MIT",
     "support": {
-        "email": "kevinmulugu@gmail.com",
-        "issues": "https://github.com/mulugu/laravel-vuejs-todolist/issues",
-        "forum": "https://github.com/mulugu/laravel-vuejs-todolist",
-        "wiki": "https://github.com/mulugu/laravel-vuejs-todolist/wiki",
-        "irc": "https://github.com/mulugu/laravel-vuejs-todolist",
-        "source": "https://github.com/mulugu/laravel-vuejs-todolist",
-        "docs": "https://github.com/mulugu/laravel-vuejs-todolist",
-        "chat": "https://github.com/mulugu/laravel-vuejs-todolist"
+        "email": "test@gmail.com",
+        "issues": "http://test.com",
+        "forum": "http://test.com",
+        "wiki": "http://test.com",
+        "irc": "http://test.com",
+        "source": "http://test.com",
+        "docs": "http://test.com",
+        "chat": "http://test.com"
     },
     "require": {
         "php": "^7.2.5",
